[backend] refactor: restructure contract type processors (#4302) (#5107)